fixed button styling issues - font style was causing text to appear not centered

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@ html, body, #root, .App {
 }
 
 div {
-  font-family: 'Hind Guntur', sans-serif;
+  font-family: 'Arial'; 
   font-size: 110%;
 }
 
